--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ attrs = "^19.3"
 pytest = "^5.2"
 isort = "^4.3"
 black = {version = "^18.3-alpha.0", allows-prereleases = true}
+bumpversion = "^0.5.3"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
