--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.6"
 attrs = "^19.3"
+ccxt = "^1.24.70"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
