--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ bumpversion = ">=0.5.3"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.poetry.scripts]
+crypto = "cryptobotkit.cli:crypto"
